Use the new function registry for the match predicate.